--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="A simple React project to learn about TypeScript"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@700&family=Fascinate+Inline&display=swap" rel="stylesheet">
     <title>Quiz App</title>
   </head>
   <body>
